--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,27 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+config/database.yml
+.rvmrc
+.rspec
+.irbrc
+.idea
+.ruby-version
+.ruby-gemset
+public/system
+public/uploads
+coverage
+
+.tags
+.tags_sorted_by_file
+.sass-cache/*
+
+/coverage/
+/spec/tmp/*
+#**.orig
+
+# Ignore application configuration
+/config/application.yml
+spec/vcr/
+dump.rdb
